--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1026,3 +1026,7 @@ input.form-control.number-of-days {
   height: 100%;
 }
 
+.fit-content {
+  width: fit-content !important;
+  min-width: 0;
+}
