--- a/app/templates/stops/_show.mustache
+++ b/app/templates/stops/_show.mustache
@@ -116,9 +116,9 @@
   {{#destination_duration}}<li><i class="fa fa-stopwatch fa-fw"></i> {{#i18n}}plannings.edit.popup.destination_duration{{/i18n}} {{destination_duration}}</li>{{/destination_duration}}
   {{#priority_text}}<li><i class="fa fa-signal fa-fw"></i> {{#i18n}}plannings.edit.popup.priority{{/i18n}} {{priority_text}}</li>{{/priority_text}}
   {{#revenue}}<li><i class="fa fa-hand-holding-dollar fa-fw"></i> {{#i18n}}plannings.edit.popup.revenue{{/i18n}} {{revenue}} {{prefered_currency}}</li>{{/revenue}}
-  {{#quantities}}
+  {{#loads}}
     <li><i class="fa {{unit_icon}} fa-fw"></i> {{#i18n}}plannings.edit.popup.quantity{{/i18n}} {{quantity_formatted}}</li>
-  {{/quantities}}
+  {{/loads}}
   {{#orders}}<li><i class="fa fa-cube fa-fw"></i> {{#i18n}}plannings.edit.popup.orders{{/i18n}} {{orders}}</li>{{/orders}}
   {{#tags_present}}<li><i class="fa fa-tag fa-fw"></i> {{#i18n}}plannings.edit.popup.tags{{/i18n}} {{#tags}}{{label}} {{/tags}}</li>{{/tags_present}}
   {{#custom_attributes}}
