Display loading icon in route head

--- a/app/assets/stylesheets/plannings.css.scss
+++ b/app/assets/stylesheets/plannings.css.scss
@@ -378,6 +378,10 @@ $sidebar-margins: 10px;
           .fa {
             margin-right: 4px;
           }
+
+          .fa.unit {
+            margin-left: 4px;
+          }
         }
 
         .stop-info {
