Add planning dashboard url

--- a/app/views/admin/resellers/_analysis_urls.html.erb
+++ b/app/views/admin/resellers/_analysis_urls.html.erb
@@ -12,4 +12,5 @@
   <%= f.text_field :customer_audience_url, help: t('admin.resellers.form.customer_audience_url_help') %>
 
   <%= f.text_field :customer_behavior_url, help: t('admin.resellers.form.customer_behavior_url_help') %>
+  <%= f.text_field :planning_dashboard_url, help: t('admin.resellers.form.planning_dashboard_url_help') %>
 </fieldset>
